# Boro

./: .gitignore  Import_custom_mes_types.m  Mass_inertia_cyllinder.m  README.md  boro.urdf  model.slxc
.cache/clangd/index/: __stdarg___gnuc_va_list.h.9B9BC90999489D40.idx  __stdarg___va_copy.h.141FB3AB1DB3C886.idx  __stdarg_header_macro.h.F886E2F20F07FA2B.idx  __stdarg_va_arg.h.EEFA5084F05906DC.idx  __stdarg_va_copy.h.668E001277971C93.idx  __stdarg_va_list.h.F7E65A5C4F0AC3AC.idx  __stddef_header_macro.h.92CFB39544BDD69A.idx  __stddef_max_align_t.h.6E3B9FA9FCAC74BE.idx  __stddef_null.h.B302E840A4CF4C53.idx  __stddef_nullptr_t.h.8E57F17ED7C46AC2.idx  __stddef_offsetof.h.DE68B2D9F41B59BA.idx  __stddef_ptrdiff_t.h.F9465A12C1D55A80.idx  __stddef_rsize_t.h.903BCEE0699DABFE.idx  __stddef_size_t.h.3194B22DB45CA564.idx  __stddef_wchar_t.h.566FD8F2AAB1D9F9.idx  alloca.h.793370BF9878CFB6.idx  allocator.h.5A667CD7BA946F98.idx  allocator.h.7CA24733AB01BE5E.idx  allocator_common.hpp.EDA0E1B901980E4B.idx  allocator_deleter.hpp.63DAE4A0CB10699A.idx  any_executable.hpp.4CBA4999E5C7FD35.idx  any_service_callback.hpp.D6BCFB2CF646C030.idx  any_subscription_callback.hpp.1BF85ACA786A45F7.idx  arguments.h.EBEE3E2CBD58A664.idx  array_list.h.06D044B646A2A89F.idx  assert.h.9895EEC17E1D2A2B.idx  bounded_vector.hpp.3D91FDF016F05D0A.idx  buffer_implementation_base.hpp.D63D0EDC38179FD6.idx  callback_group.hpp.C271BB17B0F4DAC7.idx  char_array.h.479BEB515BFD7B8F.idx  client.h.E46F6FDDACC5B25D.idx  client.hpp.201FF6274F1E1457.idx  clock.hpp.D36DA01E00F6B714.idx  collector.hpp.BD2422B23EDAACFB.idx  config.h.AAB33A4EB3650AE9.idx  config.h.C31FE1F594F7A154.idx  constants.hpp.4F2BEC22483AAB84.idx  context.h.FDE4E1FA9417B16B.idx  context.hpp.EFF8A9D248952D9C.idx  cpp_callback_trampoline.hpp.0D5F1503EA2D97CF.idx  (+339 more)
bow_project_ws/: README.md
bow_project_ws/src/bow_interfaces/: CMakeLists.txt
bow_project_ws/src/bow_interfaces/msg/: BowState.msg  BowTarget.msg
bow_project_ws/src/bow_supervisor/config/: supervisor_params.yaml
bow_project_ws/src/inverse_dynamics_controller/: package.xml
bow_project_ws/src/inverse_dynamics_controller/config/: controller_params.yaml
bow_project_ws/src/inverse_dynamics_controller/launch/: controller.launch.py
bow_project_ws/src/inverse_dynamics_controller/src/: inverse_dynamics_controller_node.cpp
matlab/models/: Everything.slx  Ros2_link.slx  model.slx  model.slx.original  model_for_screen.slx
ros2_ws/: .clang-format  commands.md  compile_commands.json
ros2_ws/.cache/clangd/index/: matlab_link_node.cpp.BB4775C162431D3F.idx
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/controller/lib/controller/: matlab_link
ros2_ws/install/controller/share/controller/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/boro_description/: CMakeLists.txt  package.xml
ros2_ws/src/boro_description/urdf/: boro.urdf
ros2_ws/src/boro_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/boro_interfaces/msg/: BowEvent.msg  TaskManagerCommand.msg
ros2_ws/src/boro_task_manager/: CMakeLists.txt
ros2_ws/src/boro_task_manager/config/: task_params.yaml
ros2_ws/src/boro_task_manager/launch/: full_system.launch.py
ros2_ws/src/boro_task_manager/src/: boro_task_manager_node.cpp
ros2_ws/src/controller/: CMakeLists.txt
ros2_ws/src/interfaces/msg/: BowEvent.msg
ros2_ws/src/inverse_dynamics_controller/: CMakeLists.txt  package.xml
ros2_ws/src/inverse_dynamics_controller/config/: controller_params.yaml
ros2_ws/src/inverse_dynamics_controller/launch/: controller_launch.py  sim_control.launch.py
ros2_ws/src/inverse_dynamics_controller/src/: inverse_dynamics_controller_node.cpp
ros2_ws/src/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
ros2_ws/src/matlab_msg_gen/glnxa64/src/boro_interfaces/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
ros2_ws/src/matlab_msg_gen/glnxa64/src/boro_interfaces/include/boro_interfaces/: visibility_control.h
ros2_ws/src/matlab_msg_gen/glnxa64/src/boro_interfaces/m/+ros/+internal/+ros2/+custommessages/+boro_interfaces/: bowEvent.m  bowState.m  bowTarget.m  taskManagerCommand.m
ros2_ws/src/matlab_msg_gen/glnxa64/src/boro_interfaces/msg/: BowState.msg
ros2_ws/src/matlab_msg_gen/glnxa64/src/boro_interfaces/src/: boro_interfaces_BowEvent_message.cpp  boro_interfaces_BowState_message.cpp  boro_interfaces_BowTarget_message.cpp  boro_interfaces_TaskManagerCommand_message.cpp
shit/src/bow_interfaces/: package.xml
shit/src/bow_interfaces/msg/: BowEvent.msg  SupervisorCommand.msg
shit/src/bow_supervisor/: CMakeLists.txt  package.xml
shit/src/bow_supervisor/launch/: full_system.launch.py
shit/src/bow_supervisor/src/: bow_supervisor_node.cpp
shit/src/inverse_dynamics_controller/: CMakeLists.txt
shit/src/inverse_dynamics_controller/src/: inverse_dynamics_controller_node.cpp
