<?xml version="1.0"?>
<package format="3">
  <name>inverse_dynamics_controller</name>
  <version>0.1.0</version>
  <description>Inverse dynamics controller for 3-DOF bow module with mixed control modes.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bow_interfaces</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
