<?xml version="1.0"?>
<package format="3">
  <name>inverse_dynamics_controller</name>
  <version>0.0.1</version>
  <description>Inverse dynamics controller with Pinocchio</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>