<?xml version="1.0"?>
<package format="3">
  <name>bow_supervisor</name>
  <version>0.1.0</version>
  <description>Supervisory state bridge between Stateflow and inverse dynamics controller.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bow_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
